--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -47,10 +47,10 @@
 															class="fa fa-umbrella"></i></span>
 													</div>
 													<div class="view-more">
-														<a th:href="@{'/view/book/' + ${item.id}}" title="">view more
+														<a th:href="@{'/view/bookroom/' + ${item.id}}" title="">view more
 															detail <i class="fa fa-long-arrow-right"></i>
 														</a>
-													</div>
+													</div>		
 												</div>
 											</div>
 											<!-- Room Detail -->
