--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2102,7 +2102,7 @@ form label {
     width: 100%;
     z-index: 1;
 }
-.offer-img > img {width:100%;}
+.offer-img > img {width:100%; height: 260px}
 .offer-img:before {
     background: #fbfbfb none repeat scroll 0 0;
     content: "";
